--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -15,6 +15,6 @@ jobs:
     - name: Install Docker
       run: |
         sudo apt-get update
-        sudo apt-get install docker.io -y
+        sudo apt-get install docker -y
         
   
